// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table RowGroup should render with "column.summary" slot 1`] = `
<tr class="v-row-group__summary">
  <div>
  </div>
</tr>
`;

exports[`Table RowGroup should render with "row.summary" slot 1`] = `
<div>
</div>
`;
